20250714 path update and pip install netapp_ontap

--- a/RSTAN_Module1_demo.ipynb
+++ b/RSTAN_Module1_demo.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "You can open the python file in an editor window:\n",
     "\n",
-    "[Open the cluster.py file in the  Editor](../../cluster.py)"
+    "[Open the cluster.py file in the  Editor](./cluster.py)"
    ]
   },
   {
